--- a/src/components/InputSection.css
+++ b/src/components/InputSection.css
@@ -3,6 +3,8 @@
     height: 300px;
     padding: 0px;
     background-image: url("../assets/Pizza_Background.jpg");
+    background-position: 0px -120px;
+    background-size: cover;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -12,16 +14,16 @@
     padding: 20px;
     border-bottom-left-radius: 30px;
     border-top-left-radius: 30px;
-    width: 125px;
+    width: 160px;
     border: black 2px solid;
-    height: 60px;
+    height: 70px;
     cursor: pointer;
 }
 
 .dateSelector {
     background-color: white;
-    height: 60px;
-    width: 160px;
+    height: 70px;
+    width: 180px;
     border: black 2px solid;
     border-bottom-right-radius: 30px;
     border-top-right-radius: 30px;
