Added logic for different modals and confirm modal

--- a/src/components/ReservationModal.css
+++ b/src/components/ReservationModal.css
@@ -24,6 +24,17 @@
     padding: 25px;
 }
 
+.loggedInModalContainer {
+    width: 500px;
+    height: 380px;
+    border-radius: 12px;
+    background-color: white;
+    box-shadow: black 0px 5px 15px;
+    display: flex;
+    flex-direction: column;
+    padding: 25px;
+}
+
 .title {
     margin: 0;
 }
