--- a/src/components/ReservationModal.css
+++ b/src/components/ReservationModal.css
@@ -13,9 +13,16 @@
     z-index: 9999;
 }
 
+.longModalContainer {
+    height: 90vh;
+}
+
+.shortModalContainer {
+    height: 680px;
+}
+
 .modalContainer {
     width: 500px;
-    height: 680px;
     border-radius: 12px;
     background-color: white;
     box-shadow: black 0px 5px 15px;
@@ -58,7 +65,7 @@
 }
 
 .body {
-    margin: 10px 0px;
+    margin: 0px 0px;
 }
 
 .logInButton {
@@ -77,7 +84,7 @@
 .input {
     width: 210px;
     height: 40px;
-    margin: 10px 10px 10px 20px;
+    margin: 5px 10px 5px 20px;
 }
 
 .finishReservationButton {
