added mock server testing for times, and 1080p fix

--- a/src/components/ConfirmationModal.css
+++ b/src/components/ConfirmationModal.css
@@ -19,7 +19,7 @@
 
 .confirmationModalContainer {
     width: 500px;
-    height: 220px;
+    height: 30vh;
     border-radius: 12px;
     background-color: white;
     box-shadow: black 0px 5px 15px;
