--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,11 +1,11 @@
 .logo {
-    max-width: 84px;
-    max-height: 100px;
+    max-width: 54px;
+    max-height: 70px;
     flex: 1;
 }
 
 .restaurantName {
-    font-size: 36px;
+    font-size: 28px;
     flex: 1;
     margin-left: 10px;
     min-width: fit-content;
@@ -19,7 +19,7 @@
 
 .headerButton {
     flex: 1;
-    max-width: 160px;
+    max-width: 10vw;
     padding: 10px;
     background-color: white;
     color: #FF6161;
