--- a/src/components/LogInModal.css
+++ b/src/components/LogInModal.css
@@ -15,7 +15,7 @@
 
 .logInModalContainer {
     width: 500px;
-    height: 320px;
+    height: 30vh;
     border-radius: 12px;
     background-color: white;
     box-shadow: black 0px 5px 15px;
