--- a/src/components/OutputSection.css
+++ b/src/components/OutputSection.css
@@ -1,23 +1,23 @@
 .grayedOut {
-    width: 208px;
-    height: 64px;
+    width: 170px;
+    height: 50px;
     color: black;
     background-color: grey;
     font-size: 28px;
     font-weight: bold;
-    margin: 20px 50px;
+    margin: 20px 20px;
     border-radius: 5px;
     border: none;
 }
 
 .timeButton {
-    width: 208px;
-    height: 64px;
+    width: 170px;
+    height: 50px;
     color: white;
     background-color: #ff6161;
     font-size: 28px;
     font-weight: bold;
-    margin: 20px 50px;
+    margin: 20px 20px;
     border-radius: 5px;
     border: none;
     cursor: pointer;
@@ -25,9 +25,10 @@
 
 .lunchHeader {
     text-align: left;
-    margin-left: 60px;
+    margin-left: 30px;
     margin-top: 10px;
     margin-bottom: 0px;
+    font-size: 30px;
 }
 
 .highlight {
