--- a/src/components/ReservationModal.css
+++ b/src/components/ReservationModal.css
@@ -18,7 +18,7 @@
 }
 
 .shortModalContainer {
-    height: 680px;
+    height: 80vh;
 }
 
 .modalContainer {
@@ -33,7 +33,7 @@
 
 .loggedInModalContainer {
     width: 500px;
-    height: 380px;
+    height: 40vh;
     border-radius: 12px;
     background-color: white;
     box-shadow: black 0px 5px 15px;
@@ -44,12 +44,13 @@
 
 .title {
     margin: 0;
+    font-size: 10px;
 }
 
 .titleButton {
     border: none;
     background: none;
-    font-size: 25px;
+    font-size: 15px;
     display: flex;
     justify-content: flex-end;
     cursor: pointer;
@@ -57,7 +58,7 @@
 
 .reservationInfo {
     color: #FF6161;
-    font-size: 20px;
+    font-size: 10px;
     font-weight: bold;
     text-align: left;
     margin: 0;
@@ -70,8 +71,8 @@
 
 .logInButton {
     display: block;
-    margin: 10px auto;
-    padding: 10px;
+    margin: 5px auto;
+    padding: 5px;
     background-color: white;
     color: #FF6161;
     border: #FF6161 solid 2px;
@@ -83,7 +84,7 @@
 
 .input {
     width: 210px;
-    height: 40px;
+    height: 25px;
     margin: 5px 10px 5px 20px;
 }
 
@@ -92,9 +93,9 @@
     background-color: #FF6161;
     color: white;
     border: none;
-    padding: 10px;
+    padding: 5px;
     border-radius: 5px;
     font-size: 26px;
-    margin-top: 20px;
+    margin-top: 10px;
     cursor: pointer;
 }
