--- a/src/components/SignUpModal.css
+++ b/src/components/SignUpModal.css
@@ -15,7 +15,7 @@
 
 .signUpModalContainer {
     width: 500px;
-    height: 480px;
+    height: 50vh;
     border-radius: 12px;
     background-color: white;
     box-shadow: black 0px 5px 15px;
