--- a/src/components/OutputSection.css
+++ b/src/components/OutputSection.css
@@ -3,9 +3,9 @@
     height: 50px;
     color: black;
     background-color: grey;
-    font-size: 28px;
+    font-size: 25px;
     font-weight: bold;
-    margin: 20px 20px;
+    margin: 10px;
     border-radius: 5px;
     border: none;
 }
@@ -15,9 +15,9 @@
     height: 50px;
     color: white;
     background-color: #ff6161;
-    font-size: 28px;
+    font-size: 25px;
     font-weight: bold;
-    margin: 20px 20px;
+    margin: 10px;
     border-radius: 5px;
     border: none;
     cursor: pointer;
@@ -26,9 +26,9 @@
 .lunchHeader {
     text-align: left;
     margin-left: 30px;
-    margin-top: 10px;
+    margin-top: 5px;
     margin-bottom: 0px;
-    font-size: 30px;
+    font-size: 27px;
 }
 
 .highlight {
