--- a/src/components/ReservationModal.css
+++ b/src/components/ReservationModal.css
@@ -18,7 +18,7 @@
 }
 
 .shortModalContainer {
-    height: 80vh;
+    height: 90vh;
 }
 
 .modalContainer {
@@ -69,23 +69,24 @@
     margin: 0px 0px;
 }
 
-.logInButton {
+.signUpButton {
     display: block;
-    margin: 5px auto;
-    padding: 5px;
+    margin: 2px auto;
+    padding: 2px;
     background-color: white;
     color: #FF6161;
     border: #FF6161 solid 2px;
     border-radius: 5px;
     font-size: 26px;
     width: 480px;
+    height: 40px;
     cursor: pointer;
 }
 
 .input {
     width: 210px;
     height: 25px;
-    margin: 5px 10px 5px 20px;
+    margin: 2px 10px 2px 20px;
 }
 
 .finishReservationButton {
@@ -93,9 +94,10 @@
     background-color: #FF6161;
     color: white;
     border: none;
-    padding: 5px;
+    padding: 2px;
     border-radius: 5px;
     font-size: 26px;
+    height: 40px;
     margin-top: 10px;
     cursor: pointer;
 }
